Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5326

conflicting types for ‘umode_t’ on powerpc64

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 14865

      On powerpc64, lustre/lustre_user.h cannot be used unless config.h from the lustre tree has been included.

      # uname -r
      2.6.32-431.20.3.el6.ppc64
      # cat test.c
      #include <lustre/lustre_user.h> 
      
      void test(void)
      {
      }
      # gcc -Wall test.c -I$PWD/lustre/include -I$PWD/libcfs/include -c
      In file included from /tmp/lustre-release/lustre/include/lustre/lustre_user.h:52,
                       from test.c:3:
      /tmp/lustre-release/libcfs/include/libcfs/posix/posix-types.h:50: error: conflicting types for ‘umode_t’
      /usr/include/asm/types.h:31: note: previous declaration of ‘umode_t’ was here
      

      This is because on ppc64 umode_t is defined to be unsigned int in asm/types.h.

      There is no longer any reason for posix-types.h to define umode_t so let's remove it.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: