LU-5326 libcfs: remove umode_t typedef

The umode_t typedef in libcfs/include/libcfs/posix/posix-types.h is no
longer needed and causes lustre_user.h to be unusable outside of the
lustre tree on powerpc64 so remove it.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Id38a5b3bb998743c3fd29a244aafea421f94c080
Reviewed-on: http://review.whamcloud.com/11055
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>